force-app/main/default/objects/clariti__LedgerAccount__c/clariti__LedgerAccount__c.object-meta.xml
<CustomObject>
    <description>Ledger Account is used to record all the financial transactions (journal entries) in the system.</description>
    <label>Ledger Account</label>
    <nameField>
        <label>Ledger Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledger Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>