force-app/main/default/objects/clariti__LedgerAccount__c/fields/clariti__AccountType__c.field-meta.xml
<CustomField>
    <fullName>clariti__AccountType__c</fullName>
    <description>The type of Sub Ledger account</description>
    <inlineHelpText>The type of Sub Ledger account</inlineHelpText>
    <label>Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Liabilities</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>