force-app/main/default/objects/clariti__LedgerAccount__c/fields/clariti__LedgerAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>clariti__LedgerAccountNumber__c</fullName>
    <label>Ledger Account Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>