force-app/main/default/objects/clariti__LedgerAccount__c/fields/clariti__Notes__c.field-meta.xml
<CustomField>
    <fullName>clariti__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>