force-app/main/default/objects/clariti__LedgerAccount__c/fields/clariti__TotalBalance__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalBalance__c</fullName>
    <description>Calculated based on Account Type. Debit - Credit for Assets and Expenses. Credit - Debit for Liabilities, Equity and Revenue.</description>
    <formula>IF( TEXT(clariti__AccountType__c)  = &apos;Assets&apos; || TEXT(clariti__AccountType__c)  = &apos;Expenses&apos;, clariti__TotalDebitAmount__c - clariti__TotalCreditAmount__c, clariti__TotalCreditAmount__c - clariti__TotalDebitAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Debit Amount - Credit Amount</inlineHelpText>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>