force-app/main/default/objects/clariti__LedgerAccount__c/fields/clariti__TotalCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalCreditAmount__c</fullName>
    <label>Total Credit Amount</label>
    <summarizedField>clariti__JournalEntryItem__c.clariti__CreditAmount__c</summarizedField>
    <summaryForeignKey>clariti__JournalEntryItem__c.clariti__LedgerAccount__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>