force-app/main/default/objects/clariti__LedgerAccount__c/fields/clariti__TotalDebitAmount__c.field-meta.xml
<CustomField>
    <fullName>clariti__TotalDebitAmount__c</fullName>
    <label>Total Debit Amount</label>
    <summarizedField>clariti__JournalEntryItem__c.clariti__DebitAmount__c</summarizedField>
    <summaryForeignKey>clariti__JournalEntryItem__c.clariti__LedgerAccount__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>